--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "node scripts/copy_assets.js && node_modules/.bin/webpack --config webpack.config.prod.js",
     "start": "node_modules/.bin/webpack-dev-server",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "yarn build && firebase deploy"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
