--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-hot-loader": "3.0.0",
+    "react-router-dom": "4.2.2",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "3.5.4",
