--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "3.5.4",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "webpack-manifest-plugin": "^1.3.2"
   }
 }
